# simple-horror-game

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/models/: axe.mtl  ceiling_lamp.mtl  cube.mtl  lederliege.mtl  light_sphere.mtl  light_switch.mtl  monster.mtl  old_office.mtl  scroll.mtl  surgery_tools.mtl
assets/models/SimpleOldTownAssets/: Bed01.mtl  Bed02.mtl  Bed04.mtl  Bed05.mtl  Bed06.mtl  Bed07.mtl  BookCase01.mtl  ChairCafe01.mtl  ChairCafeBlue01.mtl  ChairCafeBrown01.mtl  ChairCafeGreen01.mtl  ChairCafeRed01.mtl  ChairCafeWhite01.mtl  ChairCafeYellow01.mtl  DirtRoadUphill1.mtl  Fireplace1.mtl  Flokati.mtl  Flokati_Top_t.tif  LBook01.tga  LBook01_N.tga  LBook01_S.tga  LBook02.tga  LogPile.mtl  OldBuildingFloorBoards1Large.mtl  OldBuildingFloorBoards1Small.mtl  OldBuildingFloorTiles1Large.mtl  OldBuildingFloorTiles2Large.mtl  OldBuildingFloorTiles3Large.mtl  OldBuildingFloorTiles4Large.mtl  OldBuildingStaircaseWooden.mtl  OldHouseBalcony1.mtl  OldHouseBalconyOpen1.mtl  OldHouseBaseCorner1.mtl  OldHouseBaseRoundedDoor.mtl  OldHouseBaseSegment1.mtl  OldHouseBaseSegment2.mtl  OldHouseBaseSegmentBroken.mtl  OldHouseBaseSegmentWindow.mtl  OldHouseBaseStairsDown.mtl  OldHouseBaseStepsSmall.mtl  (+54 more)
assets/shaders/: blinnphong.frag  blinnphong.vert  depth2d.frag  depth2d.vert  depth_2d.frag  depth_2d.vert  depth_cube.frag  depth_cube.geom  depth_cube.vert  depth_debug.frag  passthrough.frag  passthrough.vert  text.vert
src/: Camera.cpp  Camera.h  GlMacros.h  Group.cpp  Group.h  Model.cpp  Model.h  Monster.cpp  Monster.h  OBJLoader.cpp  OBJLoader.h  OBJLoaderMain.cpp  Renderer.cpp  Renderer.h  Room.cpp  Room.h  SceneManager.cpp  SceneManager.h  Shader.cpp  Shader.h  TextRenderer.cpp  TextRenderer.h  main.cpp  scene_1.cpp
src/data-structures/: Light.cpp  Light.h  Material.h  SubMesh.h
